test/syntax/wrong/utf1.kk
function main()
{
  print(2 + "hello effectful world of 効果! ");
}
